Safari365 Prod/src/objects/OSR__c.object
<CustomObject>
    <fields>
        <fullName>APPLY_FRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY FRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_MON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY MON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_SAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY SAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_SUN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY SUN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_THU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY THU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_TUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY TUE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APPLY_WED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APPLY WED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BUY_CURRENCY__c</fullName>
        <label>BUY CURRENCY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CANCEL_HOURS__c</fullName>
        <label>CANCEL HOURS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHARGEEXTRA1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHARGEEXTRA1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHARGEEXTRA2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHARGEEXTRA2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHARGEEXTRA3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHARGEEXTRA3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMMISSIONABLE__c</fullName>
        <label>COMMISSIONABLE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMM_ORIDE__c</fullName>
        <label>COMM ORIDE</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DATE_FROM__c</fullName>
        <label>DATE FROM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DATE_TO__c</fullName>
        <label>DATE TO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDITVTEXT10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDITVTEXT10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDITVTEXT1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDITVTEXT1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDITVTEXT2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDITVTEXT2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXCHANGE_DIV_RATE__c</fullName>
        <label>EXCHANGE DIV RATE</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXCHANGE_MUT_RATE__c</fullName>
        <label>EXCHANGE MUT RATE</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIXED_COUNT__c</fullName>
        <label>FIXED COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FREE10__c</fullName>
        <label>FREE10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FREE1__c</fullName>
        <label>FREE1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FREE2__c</fullName>
        <label>FREE2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROSS_NETT__c</fullName>
        <label>GROSS NETT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAX_SCU__c</fullName>
        <label>MAX SCU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_SCU__c</fullName>
        <label>MIN SCU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPC_Description__c</fullName>
        <formula>OPC_Lookup__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPC_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPC</label>
        <referenceTo>OPC__c</referenceTo>
        <relationshipLabel>OSRs</relationshipLabel>
        <relationshipName>OSRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPT_ID__c</fullName>
        <label>OPT ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPT_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPT</label>
        <referenceTo>Opt__c</referenceTo>
        <relationshipLabel>OSRs</relationshipLabel>
        <relationshipName>OSRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSR_ID__c</fullName>
        <externalId>true</externalId>
        <label>OSR ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFER__c</fullName>
        <label>PREFER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRICE_CODE__c</fullName>
        <label>PRICE CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROV__c</fullName>
        <label>PROV</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RATE_TEXT__c</fullName>
        <label>RATE TEXT</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REPEAT_IND__c</fullName>
        <label>REPEAT IND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REPEAT_TIMES__c</fullName>
        <label>REPEAT TIMES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SALE_FROM__c</fullName>
        <label>SALE FROM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SALE_TO__c</fullName>
        <label>SALE TO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SELLBEFORETRAVEL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SELLBEFORETRAVEL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SELLBEFORETYPE__c</fullName>
        <label>SELLBEFORETYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELL_CODE__c</fullName>
        <label>SELL CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELL_CURRENCY__c</fullName>
        <label>SELL CURRENCY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPLITRATE__c</fullName>
        <label>SPLITRATE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STAY10__c</fullName>
        <label>STAY10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAY1__c</fullName>
        <label>STAY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAY2__c</fullName>
        <label>STAY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAYPAY_FROM__c</fullName>
        <label>STAYPAY FROM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STAYPAY_TO__c</fullName>
        <label>STAYPAY TO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STAY_TYPE__c</fullName>
        <label>STAY TYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VALIDATE_MIN_MAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VALIDATE MIN MAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VTEXT10__c</fullName>
        <label>VTEXT10</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTEXT1__c</fullName>
        <label>VTEXT1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTEXT2__c</fullName>
        <label>VTEXT2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>OSR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DATE_FROM__c</columns>
        <columns>DATE_TO__c</columns>
        <columns>OSR_ID__c</columns>
        <columns>OPT_ID__c</columns>
        <columns>PRICE_CODE__c</columns>
        <columns>OPT_Lookup__c</columns>
        <columns>APPLY_WED__c</columns>
        <columns>CHARGEEXTRA1__c</columns>
        <columns>MIN_SCU__c</columns>
        <columns>STAY3__c</columns>
        <columns>FREE1__c</columns>
        <columns>FREE2__c</columns>
        <columns>FREE3__c</columns>
        <columns>FREE4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Not_Applicable_to_Monday</fullName>
        <columns>NAME</columns>
        <columns>OPT_ID__c</columns>
        <columns>PREFER__c</columns>
        <columns>OPT_Lookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APPLY_MON__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Applicable to Monday</label>
    </listViews>
    <nameField>
        <displayFormat>OSR-{00000000}</displayFormat>
        <label>OSR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>